kubernetes/apps/default/ganymede/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ganymede-frontend
  labels:
    app: ganymede-frontend
spec:
  selector:
    app: ganymede-frontend
  ports:
    - name: ganymede-frontend
      port: 3000
      targetPort: 3000
      protocol: TCP
