kubernetes/apps/default/ganymede/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ganymede-ingress
  labels:
    app: ganymede-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ganymede.lab.zibbp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ganymede
                port:
                  number: 3000
    - host: api-ganymede.lab.zibbp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ganymede
                port:
                  number: 4000
    - host: cdn-ganymede.lab.zibbp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ganymede
                port:
                  number: 8080
  tls:
    - hosts:
        - ganymede.lab.zibbp.net
        - api-ganymede.lab.zibbp.net
        - cdn-ganymede.lab.zibbp.net
      secretName: lab-zibbp-net-tls
