kubernetes/apps/default/ganymede/base/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ganymede-nginx-ingress
  labels:
    app: ganymede-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cdn.ganymede.lab.zibbp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ganymede-nginx
                port:
                  number: 8080
  tls:
    - hosts:
        - ganymede.lab.zibbp.net
      secretName: lab-zibbp-net-tls
